# shell-craft

./: .env.sample  .gitignore  README.md  get-dev-bastion-instance-id  load_env.sh  pyproject.toml  requirements.txt  setup-aws-credentials  test.sh  test2.sh
sh_src/: find-instance-ids  get-dev-bastion-instance-id  load_env.sh  rds-tunnel-recovery  setup-aws-credentials  setup-aws-credentials-v2
sh_src/test/: call_load_env.sh  direct_load_env.sh
src/: sts_mfa_with_bitwarden.py  totp_to_sts_token.py
tests/: load_env.py
