[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "craft"
version = "0.1.0"
description = "A short description of the project"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.12.4"

[project.optional-dependencies]
dev = ["pytest", "flake8", "black"]

[project.scripts]
mypytest = "src.pytest:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
